2008-11-18  Wim Taymans  <wim.taymans@collabora.co.uk>

	* win32/common/libgstreamer.def:
	Add new symbols to .def file.

2008-11-18  Wim Taymans  <wim.taymans@collabora.co.uk>

	* docs/gst/gstreamer-sections.txt:
	* gst/gstbin.c: (gst_bin_recalculate_latency),
	(gst_bin_change_state_func):
	* gst/gstbin.h:
	Add method to recalculate and redistribute the latency on a bin.
	API: gst_bin_recalculate_latency().

2008-11-18  Wim Taymans  <wim.taymans@collabora.co.uk>

	* gst/gstbuffer.h:
	Document the free_func.

2008-11-17  Sebastian Dröge  <sebastian.droege@collabora.co.uk>

	* libs/gst/controller/gstinterpolation.c:
	* libs/gst/controller/gstlfocontrolsource.c:
	Use gst_guint64_to_gdouble instead of gst_util_guint64_to_gdouble
	as it is mapped to a cast on non-win32 platforms.

2008-11-17  Stefan Kost  <ensonic@users.sf.net>

	* libs/gst/controller/gstcontroller.c:
	* libs/gst/controller/gstcontrollerprivate.h:
	  Keep last-value and only call set_property if value has changed. This
	  supresses all the g_object_notifies we would trigger otherwise. It
	  also allows the user to chage the value while there is no controller
	  change.

2008-11-17  Stefan Kost  <ensonic@users.sf.net>

	* gst/gstvalue.c:
	  Don't crash if either of the string GValues is empty.

2008-11-17  Andy Wingo  <wingo@pobox.com>

	* tools/gst-inspect.c (print_all_uri_handlers): New function,
	prints a summary of what URI schemes are supported by what
	elements.
	(main): Plumb in support for --uri-handlers or -u, and fix the
	argc check for -a and -u.

2008-11-17  Sebastian Dröge  <sebastian.droege@collabora.co.uk>

	* gst/gstutils.h:
	Add G_GNUC_PURE to gst_util_uint64_scale* and the double<->uint64
	conversion functions.

2008-11-13  Wim Taymans  <wim.taymans@collabora.co.uk>

	* gst/gstbuffer.c: (gst_buffer_finalize):
	Avoid costly typechecking for trivially correct pointers.

	* gst/gstpoll.c: (gst_poll_wait):
	Add some G_LIKELY here and there.
